hphp/test/zend/good/Zend/tests/variadic/variadic_changed_typehint_error.php.expectf

Fatal error: Parameter $params is variadic and has a type constraint (string); variadic params with type constraints are not supported in non-Hack files in %s/variadic_changed_typehint_error.php on line 4
